2005-04-10  Zoltan Varga  <vargaz@freemail.hu>

	* arrays.cs: Add new regression test. Fix warnings.

2005-04-09  Zoltan Varga  <vargaz@freemail.hu>

	* mini-amd64.c (mono_arch_output_basic_block): Fix stack alignment
	and leakage in CKFINITE.

	* exceptions-amd64.c (mono_arch_get_throw_exception_by_name): Change
	this to a null op since it is called on amd64 too.

	* exceptions-amd64.c (get_throw_trampoline): Align stack.

	* exceptions-amd64.c (mono_arch_get_throw_exception_by_name): Remove
	body since this is not used on amd64.
	
	* mini-amd64.h (MONO_ARCH_NO_EMULATE_LONG_SHIFT_OPS): Remove duplicate define.

	* mini-amd64.c: Remove obsolete fixmes.

	* mini.c (print_method_from_ip): Fix debugging support.

2005-2-1  Massimiliano Mantione  <massi@ximian.com>

	* ssapre.c: Fix a subtle bug about availability, and limit SSAPRE
	so that expressions that don't give much gain are not reduced.
	* ssapre.h: Likewise.

2005-04-04  Zoltan Varga  <vargaz@freemail.hu>

	* exceptions-x86.c (mono_arch_find_jit_info): Remove last SC_EBP reference.

	* mini-x86.c (mono_emit_stack_alloc): Fix localloc under windows.

	* mini-x86.h exceptions-x86.c: Hopefully fix compilation on *BSD.

2005-04-01  Zoltan Varga  <vargaz@freemail.hu>

	* mini-sparc.c mini-sparc.h: Add asserts when running with sigaltstack.

	* exceptions-x86.c (mono_arch_monoctx_to_sigctx): Fix cygwin build.

2005-03-31  Zoltan Varga  <vargaz@freemail.hu>

	* mini-x86.c: If sigaltstack support is enabled, perform win32 style
	stack touching.

	* mini.h (mono_arch_sigctx_to_monoctx): New arch-specific function.

	* mini.h (mono_arch_monoctx_to_sigctx): New arch-specific function.

	* mini.c: sigaltstack support requires MONO_ARCH_USE_SIGACTION.

	* mini-x86.h mini-x86.c exceptions-x86.c: Add support for 
	MONO_ARCH_USE_SIGACTION. Fixes #74252.

	* mini-x86.h: Enable MONO_ARCH_USE_SIGACTION on linux.

	* mini-x86.c: Fix up stack overflow handling.	

	* exceptions.cs: Add new regression test.
