@@ -1,3 +1,8 @@
+2005-04-11  Zoltan Varga  <vargaz@freemail.hu>
+
+	* exceptions-x86.c mini-x86.h mini-x86.c: Applied some freebsd patches 
+	from Bill Middleton <flashdict@gmail.com>.
+
 2005-04-10  Zoltan Varga  <vargaz@freemail.hu>
 
 	* arrays.cs: Add new regression test. Fix warnings.
